syntax ="proto3";
package product;
option go_package="/product";

service ProductCatalogService{
    // 根据分类,获取商品列表
    rpc ListProducts(ListProductsReq) returns(ListProductsResp){}
    // 获取商品详情
    rpc GetProduct(GetProductReq) returns(GetProductResp){}
    // 根据查询内容,获取商品列表
    rpc SearchProducts(SearchProductsReq) returns(SearchProductsResp){}
}


message ListProductsReq{
    int32 page = 1;
    int32 page_size = 2;
    string category_name = 3;
}

message Product {
    uint32 id = 1;
    string name = 2;
    string description = 3;
    string picture = 4;
    float price = 5;
    repeated string categoryList = 6;
}

message ListProductsResp{
    repeated Product productList = 1;
}

message GetProductReq{
    uint32 id = 1;
}

message GetProductResp{
    Product product = 1;
}
message SearchProductsReq{
    string query = 1;
}

message SearchProductsResp{
    repeated Product productList = 1;
}